# kafka-actix-example

./: Cargo.toml  README.md  docker-compose.yml
src/: cache.rs  client.rs  kafka.rs  lib.rs  server.rs
