[package]
name = "wordcount"
version = "0.2.0"
authors = ["Arthur Rand <art.rand@gmail.com>"]
edition = "2018"

[[bin]]
name = "wordcount-server"
path = "src/bin/server.rs"

[[bin]]
name = "wordcount-client"
path = "src/bin/client.rs"


[dependencies]
actix = "0.9"
actix-web = "2.0.0"
actix-rt = "1.0.0"
redis = "0.15.1"
tokio = { version = "0.2", features = ["full"] }
futures = { version = "0.3", features = ["compat"] }
rdkafka = "0.23.0"
rdkafka-sys = "=1.3.0"

log = "*"
env_logger = "*"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

